# financial-data-pipeline

./: .gitignore  README.md  pyproject.toml
artifacts/: combined_statistics.csv
src/financial_data/: __init__.py  main.py  storages.py
src/financial_data/collect/: __init__.py  bcs.py  bks.py  tinkoff.py
src/financial_data/evaluate/: __init__.py  data_quality.py  eda.py
src/financial_data/parsing/: tinkoff.py
src/financial_data/preprocessing/: 3d_party.py  __init__.py  clear_textbooks.py  clear_txt.py  create_config.py  html2txt.py  index.py  pdf2txt.py  split.py  thrd_party.py
src/financial_data/process/: pdf2txt.py
src/financial_data/utils/: jsonl.py  parsing.py  text_processer.py
src/financial_data/vizualize/: chunks.py  dashboard.py  data_quality.py  embeddings.py
