[tool.poetry]
name = "financial_data"
version = "1.0"
description = ""
authors = ["Danil <danil5678444@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
hydra-core = "^1.3.2"
pytest = "^7.4.0"
pymupdf = "^1.24.14"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.scripts]
pdf2txt = "financial_data.process.pdf2txt:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
