[tool.poetry]
name = "financial_data"
version = "1.0"
description = ""
authors = ["Danil <danil5678444@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pytest = "^7.4.0"
pymupdf = "^1.24.14"
pymupdf4llm = "^0.0.17"
langchain-text-splitters = "^0.3.2"
prefect = "^3.1.5"
transformers = "^4.47.0"
lxml = "^5.3.0"
torch = {version = "^2.5.1+cpu", source = "torch_cpu"}
langchain-huggingface = "^0.1.2"
langchain-community = "^0.3.10"
faiss-cpu = "^1.9.0.post1"
html2text = "^2024.2.26"
tiktoken = "^0.8.0"
nltk = "^3.9.1"
langdetect = "^1.0.9"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.poetry.scripts]
pdf2txt = "financial_data.preprocessing.pdf2txt:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
